# aoc-2023

./: .env.example  Cargo.toml  LICENSE  LICENSE.md  README.md  init.sh
benches/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs
day_01/: Cargo.toml
day_01/src/: lib.rs  part1.rs  part2.rs  part2_trie.rs  tests.rs
day_02/: Cargo.toml
day_02/src/: entity.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_03/: Cargo.toml
day_03/src/: entity.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_04/: Cargo.toml
day_04/src/: entity.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_05/: Cargo.toml
day_05/src/: entity.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_06/: Cargo.toml
day_06/src/: entity.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_07/: Cargo.toml
day_07/src/: common.rs  entity.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_08/: Cargo.toml
day_08/src/: entity.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_09/: Cargo.toml
day_09/src/: common.rs  lib.rs  parser.rs  part1.rs  part2.rs  tests.rs
day_10/: Cargo.toml
day_10/src/: entity.rs  lib.rs  parser.rs  part1.rs  tests.rs
parsers/: Cargo.toml
parsers/src/: lib.rs
src/: main.rs
task_01/: Cargo.toml
task_01/src/: lib.rs  part1.rs  part2.rs
task_02/src/: lib.rs  part2.rs
template/: Cargo.toml  bench.rs
template/src/: lib.rs  part1.rs  part2.rs  tests.rs
