[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "parsers", "day_01", "day_02", "day_03", "day_04"]

[workspace.dependencies]
lazy_static = "1.4.0"
nom = "7.1.3"
typed-arena = "2.0.2"

[dependencies]
day_01 = { path = "day_01" }
day_02 = { path = "day_02" }
day_03 = { path = "day_03" }
day_04 = { path = "day_04" }
