[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "parsers", "day_01", "day_02", "day_03", "day_04", "day_05", "day_06", "day_07", "day_08"]

[workspace.dependencies]
lazy_static = "1.4.0"
nom = "7.1.3"
typed-arena = "2.0.2"
num = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day_08"
harness = false

[dependencies]
day_01 = { path = "day_01" }
day_02 = { path = "day_02" }
day_03 = { path = "day_03" }
day_04 = { path = "day_04" }
day_05 = { path = "day_05" }
day_06 = { path = "day_06" }
day_07 = { path = "day_07" }
day_08 = { path = "day_08" }
